style.css
* {
    font-family: 'Manrope', sans-serif;
    font-family: 'Roboto', sans-serif;
}

body {
    margin: 0;
}

.container {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;
    height: 100vh;
}

.sidebar {
    background-color: #38bdf8;
    color: #bae6fd;
    /* border: solid 1px black; */
    grid-column: 1/2;
    grid-row: 1/3;
    display: grid;
    grid-auto-rows: min-content ;
    font-family: 'Manrope', sans-serif;
    font-family: 'Roboto', sans-serif;
    gap: 16px;

}
ul{
    list-style-type: none;
    display: grid;
    grid-column: 1fr 1fr 1fr;
}

li > p {
    margin: 0;
}

li {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    font-size: 1.2rem;
}

.d-one {
    display: grid;
    gap: 12px;
}

.side-logo {
    height: 35px;
}

.logo {
    display: grid;
    grid-auto-columns: min-content;
    align-items: center;
}



.logo-bee {
    height: 100px;
    width: 100px;
    fill: white;
    grid-column: 1;
}
h3 {
    font-size:1.5rem;
    grid-column: 2;
}

.header {
    grid-column: 2;
    grid-row: 1/2;
    display: grid;
    grid-auto-rows: min-content;
    box-shadow: 4px 23px 35px 0px rgba(0,0,0,0.1);
}
/* .placeholder {
    border: solid 1px blue;
}

.placeholder {
    border: solid 1px blue;
} */

.navbar {
    /* border: solid 1px blue; */
    background-color: white;
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: 2fr 1fr;
    box-shadow: 4px 23px 35px 0px rgba(0,0,0,0.1);
    gap: 16px;
    padding: 12px;
}





.projects {
    border: solid 1px  black;
    grid-row: 1/3;
}

input {
    background-color: #e2e8f0;
    width: 600px;
    height:25px;
    border: none;
    border-radius: 10px;
    font-size: 1.5rem;
}

.searchbar {
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    /* width: 50%; */
    align-items: center;
    margin-top: 20px;
    margin-left: 30px;
    gap: 12px
}

.profile {
    grid-row: 2/3;
    display: flex;
    gap: 25px;
}

.profile-pic {
        width: 100px;
        height: 100px;
        border-radius: 50%;
      
        background-repeat: no-repeat;
        background-position: center center;
        background-size: cover;
        margin-left: 30px;

}

.profile-text > p {
    font-size: 0.8rem;
    font-family: 'Manrope', sans-serif;
    font-family: 'Roboto', sans-serif;
    font-weight:900;
}

 h4 {
    font-family: 'Manrope', sans-serif;
    font-family: 'Roboto', sans-serif;
    font-weight:900;
    margin-top: 12px;
}

.profile-tr {
    grid-column: 2/3;
    display: flex;
    align-items: center;
    gap: 30px;
}

.profile-tr > .profile-pic,
.card > .profile-pic {
    height: 50px;
    width: 50px;
    margin-left: 0;

}

.user-buttons {
    grid-row: 2/3;
    grid-column: 2/3;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

button {
    background-color: #38bdf8;
    color: white;
    height: 40px;
    width: 100px;
    border: none;
    border-radius: 15px;
}

.content {
    grid-column: 2/3;
    grid-row: 2/3;
    display: grid;
    grid-template-columns: 2fr 1fr;
    background-color: #e2e8f0;
    grid-template-rows: min-content 4fr;
    padding-top: 16px;
    gap: 12px;
}

.p-header {
    grid-column: 1/2;
}

h3,
.trends> h3{
    margin: 0;
    margin-left: 24px;
}

.content-cards {
    display:grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, minmax( 250px,1fr));
    gap: 24px;
    padding: 16px;

}

.content-announcements {
    grid-column: 2/3;
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    margin-left: 16px;
    margin-top: 16px;
}

.card {
    height: 80%;
    width: 95%;
    border-radius: 12px;
    background-color: #fafafa;
    border-left: 8px #d946ef solid;
    box-shadow: 4px 23px 7px -10px rgba(0,0,0,0.1);
    display: grid;
    /* grid-auto-rows: min-content; */
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 20% 60% 20%;
    box-sizing: border-box;
    padding: 12px;

}
.card > h4 {
    margin-bottom: 0;
}

.card > p {
    grid-row: 2/3;
    grid-column: 1/3;
    font-size: .9rem;
}

.content-announcements > .card,
.trends > .card {
    width: 85%;
    border: none
}

.card-buttons {
    grid-row: 3/4;
    grid-row: 3/4;
    grid-column: 2;
    display: flex;
    justify-content: space-evenly;
}

.content-announcements > .card {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    grid-template-columns: none;
    padding: 24px;
    gap: 12px;
}

hr {
    margin: 5px 0;
    height: 1px;
    border: none;
    background: -webkit-gradient(linear, 0 0, 100% 0, from(transparent), to(transparent), color-stop(50%, black));
}

.announce-text {
    display: grid;
}

.announce-text > h4 {
    margin: 0;
}
.announce-text > p {
    font-size: .8rem;

}

.trends > .card {
    grid-template-rows: none;
    grid-auto-rows: 1fr;
    grid-template-columns: min-content 1fr;
    gap: 16px
}
.trends-text> h4, p {
    margin: 0 ;
}

.trends-text > p {
    font-size: 0.7rem;
    margin-top: 6px;
    color: grey;
}

